# yuca

./: .gitignore  MODULE.bazel  README.md  build_yuca.sh  pyproject.toml
benchmarks/: BUILD  run_dacapo.sh  run_pyperformance.sh  run_renaissance.sh
benchmarks/src/main/java/yuca/benchmarks/: BUILD  YucaDacapoCallback.java  YucaRenaissancePlugin.java
benchmarks/src/main/java/yuca/benchmarks/util/: BUILD  LoggerUtil.java  YucaUtil.java
experiments/bert_finetune/: bert_glue_finetune.py  bert_glue_finetune.sh  bert_glue_finetune_experiment.sh  bert_glue_finetune_experiment_test.sh
experiments/bert_inference/: bert_glue_inference.py  bert_glue_inference.sh  bert_glue_inference_experiment.sh  bert_glue_inference_experiment_test.sh
scripts/: build_python_protos.sh  yuca_server.sh  yuca_server_with_nvml.sh
service/: BUILD
service/src/main/java/yuca/server/: BUILD  LoggerUtil.java  YucaServer.java  YucaServerImpl.java
service/src/main/proto/yuca/service/: BUILD  yuca_service.proto
service/src/main/python/: pyproject.toml
service/src/main/python/yuca/: baseline_multiprocess_monitor.py  cli.py  client.py  csv_converter.py  multiprocess_monitor.py  report.py  signal.py  signal_pb2.py  signal_pb2.pyi  signal_pb2_grpc.py  yuca_service_pb2.py  yuca_service_pb2.pyi  yuca_service_pb2_grpc.py
service/src/main/python/yuca/eventtrace/: eventtrace.py  footprints.py  tensor.py
service/src/main/python/yuca/nvml/: __main__.py  baseline_server.py  equivalence_test.py  sampler.py  server.py  temperature_monitor.py  thermal_cooldown.py
service/src/main/python/yuca/tensorflow/: callbacks.py  hook.py
service/src/main/python/yuca/util/: monitor.py  smoke_test.py
src/yuca/: BUILD
src/yuca/src/main/c/: BUILD
src/yuca/src/main/java/yuca/: BUILD  RaplSource.java  YucaApplicationMonitor.java  YucaEndToEndMonitor.java  YucaMonitor.java  YucaSystemMonitor.java
src/yuca/src/main/resources/emissions/: BUILD
(+65 files in other folders)
