[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yuca"
version = "0.1.0"
dependencies = [
    "psutil",
    "grpcio",
    "protobuf",
    "pynvml",
    "tqdm",
    "pandas",
    "pyperformance",
    "tf-models-official==2.15.0",
    "tensorboard==2.15.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.15.0",
    "tensorflow-addons==0.23.0",
    "tensorflow-datasets==4.9.3",
    "tensorflow-estimator==2.15.0",
    "tensorflow-hub==0.16.1",
    "tensorflow-io-gcs-filesystem==0.37.0",
    "tensorflow-metadata==1.15.0",
    "tensorflow-model-optimization==0.8.0",
    "tensorflow-text==2.15.0",
]

[tool.setuptools.packages.find]
where = ["service/src/main/python"]
